--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -210,3 +210,75 @@ div.olMapViewport {
 .layer-editing-panel .x-form-item-label span {
 	cursor: pointer;
 }
+
+/* mapfish css imported */
+.mf-print-action {
+    background-image:url(../img/mapfish/printer.png) !important;
+}
+
+.zoomin {
+    background-image:url(../img/mapfish/icon_zoomin.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.zoomout {
+    background-image:url(../img/mapfish/icon_zoomout.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.zoomfull {
+    background-image:url(../img/mapfish/icon_zoomfull.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.pan {
+    background-image:url(../img/mapfish/icon_pan.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.back {
+    background-image:url(../img/mapfish/resultset_previous.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.next {
+    background-image:url(../img/mapfish/resultset_next.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.modifyfeature {
+    background-image:url(../img/mapfish/move_vertex_off.png) !important;
+    height:20px !important;
+    width:20px !important;
+}
+
+.drawpoint {
+  background-image:url(../img/mapfish/draw_point_off.png) !important;
+  height:20px !important;
+  width:20px !important;
+}
+
+.drawline {
+  background-image:url(../img/mapfish/draw_line_off.png) !important;
+  height:20px !important;
+  width:20px !important;
+}
+
+.drawpolygon {
+  background-image:url(../img/mapfish/draw_polygon_off.png) !important;
+  height:20px !important;
+  width:20px !important;
+}
+
+.info {
+  background-image:url(../img/mapfish/info.png) !important;
+  height:20px !important;
+  width:20px !important;
+}
+
