--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -81,39 +81,39 @@ div.olMapViewport {
 .gx-tree-layer-panel-bwrap {
     overflow: visible;
 }
-.geob-tree-layer-panel-body {
+.geor-tree-layer-panel-body {
 }
-.geob-tree-node .x-tree-elbow, .geob-tree-node .x-tree-elbow-end {
+.geor-tree-node .x-tree-elbow, .geor-tree-node .x-tree-elbow-end {
    width: 0px !important;    
 }
 
 .x-tree-node-collapsed .x-tree-node-icon, .x-tree-node-expanded .x-tree-node-icon, .x-tree-node-leaf .gx-tree-layer-icon {
    width: 0px !important;
 }
-.geob-tree-node {
+.geor-tree-node {
     border-bottom: thin dotted #D7D7D7;
     padding: 3px 0 0 3px;
 }
-.geob-toolbar {
+.geor-toolbar {
     background: none; !important;
     border-style: none; !important;
 }
-.geob-btn-style {
+.geor-btn-style {
     background-image: url(../img/famfamfam/map_edit.png) !important;
 }
-.geob-btn-metadata {
+.geor-btn-metadata {
     background-image: url(../img/famfamfam/application_view_list.gif) !important;
 }
-.geob-btn-query {
+.geor-btn-query {
     background-image: url(../img/famfamfam/cog.gif) !important;
 }
-.x-btn-icon .geob-btn-info {
+.x-btn-icon .geor-btn-info {
     background: transparent url(../img/famfamfam/information.png);
 }
-.geob-save-map {
+.geor-save-map {
     background-image: url(../img/famfamfam/folder_page.gif) !important;
 }
-.geob-load-map {
+.geor-load-map {
     background-image: url(../img/famfamfam/map_go.gif) !important;
 }
 
@@ -169,7 +169,7 @@ div.olMapViewport {
 .olControlAttribution a img {
     display: none;
 }
-.geob-layers-form-text a img {
+.geor-layers-form-text a img {
     display: none;
 }
 
@@ -182,11 +182,11 @@ div.olMapViewport {
 	font-weight: bold;
 }
 
-.geob-btn-sync {
+.geor-btn-sync {
     background-image: url(../img/famfamfam/database_save.png) !important;
 }
 
-.geob-btn-cancel {
+.geor-btn-cancel {
     background-image: url(../img/famfamfam/cross.gif) !important;
 }
 
