--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -131,6 +131,9 @@ div.olMapViewport {
 .geor-load-map {
     background-image: url(../img/famfamfam/map_go.gif) !important;
 }
+.geor-permalink {
+    background-image: url(../img/famfamfam/link.png) !important;
+}
 .geor-edit-osm {
     background-image: url(../img/osm_logo.png) !important;
 }
