mapfishpp: bold layer names - closes #4532

--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -322,3 +322,9 @@ div.olMapViewport {
 	padding: 5px;
 	border: 1px solid #bbb;
 }
+
+/* Bold layer names in layer manager http://applis-bretagne.fr/redmine/issues/4532 */
+.geor-tree-node a.x-tree-node-anchor span {
+	font-weight: bold;
+	color: #333;
+}
