--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -125,6 +125,9 @@ div.olMapViewport {
 .x-btn-icon .geor-btn-info {
     background: transparent url(../img/famfamfam/information.png);
 }
+.x-btn .layers-add {
+    background-image: url(../img/famfamfam/add.png);
+}
 .geor-save-map {
     background-image: url(../img/famfamfam/folder_page.gif) !important;
 }
