--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -382,3 +382,41 @@ div.olMapViewport {
 .context-selector .default {
     font-weight: bold;
 }
+
+/* correct button focus with chromium */
+/* from http://www.sencha.com/forum/archive/index.php/t-82116.html */
+.x-btn-focus .x-btn-tl{
+    background-position: -6px 0;
+}
+
+.x-btn-focus .x-btn-tr{
+    background-position: -9px 0;
+}
+
+.x-btn-focus .x-btn-tc{
+    background-position: 0 -9px;
+}
+
+.x-btn-focus .x-btn-ml{
+    background-position: -6px -24px;
+}
+
+.x-btn-focus .x-btn-mr{
+    background-position: -9px -24px;
+}
+
+.x-btn-focus .x-btn-mc{
+    background-position: 0 -2168px;
+}
+
+.x-btn-focus .x-btn-bl{
+    background-position: -6px -3px;
+}
+
+.x-btn-focus .x-btn-br{
+    background-position: -9px -3px;
+}
+
+.x-btn-focus .x-btn-bc{
+    background-position: 0 -18px;
+}
