olImageLoadError css class added to prevent broken WMTS tiles

--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -433,3 +433,8 @@ div.olMapViewport {
 .x-menu-list .x-menu-item-checked {
 	font-weight: bold;
 }
+
+/* avoid broken WMTS tiles at the lower end of the pyramid */
+.olImageLoadError {
+	display: none;
+}
