mapfishapp - help popup slides down from top of page

--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -461,3 +461,14 @@ div.olMapViewport {
 .geor-btn-edit-polygon {
 	background-image:url(../img/geosilk/shape_square_orange_add.png) !important;
 }
+
+.help .x-box-mc {
+    font-size:14px;
+}
+#help-div {
+    position:absolute;
+    left:35%;
+    top:10px;
+    width:350px;
+    z-index:20000;
+}
