share context with other apps

--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -150,6 +150,9 @@ div.olMapViewport {
 .geor-permalink {
     background-image: url(../img/famfamfam/link.png) !important;
 }
+.geor-share {
+    background-image: url(../img/share.png) !important;
+}
 .geor-edit-osm {
     background-image: url(../img/osm_logo.png) !important;
 }
