mapfishapp - unselectable layer manager tree nodes

--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -448,3 +448,7 @@ div.olMapViewport {
 .olImageLoadError {
 	display: none;
 }
+
+#geor-layerManager .x-tree-node .x-tree-selected {
+	background-color: #fff;
+}
