mapfishapp: remove layer icon revisited - closes #728

--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -78,7 +78,7 @@ div.olMapViewport {
     background: transparent url(../img/famfamfam/bullet_arrow_down.png);
 }
 .gx-tree-layer-actions .delete {
-    background: transparent url(../img/famfamfam/delete.gif);
+    background: transparent url(../img/famfamfam/cross.gif);
 }
 .gx-tree-layer-panel {
     background: none;
