--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -17,8 +17,7 @@ div.olMapViewport {
  * ovmap styling
  */
 .olControlOverviewMapElement {
-  -moz-border-radius: 1em 0 0 0;
-  -webkit-border-radius: 1em 0 0 0;
+  border-radius: 1em 0 0 0;
   background-color:#e0e0e0;
   padding:10px 18px 10px 10px;
 }
@@ -173,8 +172,7 @@ div.olMapViewport {
 #waiter span {
 	background:#EFAE00 none repeat scroll 0 0;
 	padding:2px;
-	-moz-border-radius: 0 0 4px 4px;
-	-webkit-border-radius: 0 0 4px 4px;
+	border-radius: 0 0 4px 4px;
 }
 
 .olControlLoadingPanel {
