--- a/src/main/webapp/app/css/main.css
+++ b/src/main/webapp/app/css/main.css
@@ -145,6 +145,9 @@ div.olMapViewport {
 .geor-load-map {
     background-image: url(../img/famfamfam/map_go.gif) !important;
 }
+.geor-add-map {
+    background-image: url(../img/famfamfam/map_add.png) !important;
+}
 .geor-load-tools {
     background-image: url(../img/fugue/wrench--plus.png) !important;
 }
